--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -4,4 +4,7 @@
     --status_color : rgb(109, 109, 218);
     --titlecolor: whitesmoke;
     --info_indent: 13px;
+    --main_frame_top_margin:40px;
+    --component-Status_top_margin:30px;
+    --component_Title_top_margin:10px;
 }
