--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,10 +6,22 @@
  @import "../CSS/component/status-bar.css";
  @import "../CSS/component/todo.css";
  @import "../CSS/component/clock.css";
+ @import "../CSS/component/memo.css";
+ @import "../CSS/component/schedule.css";
+ @import "../CSS/component/statistics.css";
+
  body {
      height:1000vh;
      background-color: var(--background_color);
      font-family : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  }
  
- 
+
+ .main_frame{
+     display: flex;
+     justify-content: space-between;
+     margin-top:var(--main_frame_top_margin);
+  
+ }
+
+
