--- a/CSS/component/statistics.css
+++ b/CSS/component/statistics.css
@@ -1,8 +1,24 @@
 .js-Statistics{
-
+    margin-right:240px;
 }
 
 .js-Statistics_Title{
     color :whitesmoke;
     font-weight: 600;
 }
+
+
+.js-Statistics__canvas1{
+    margin-top: var(--component_Title_top_margin);
+
+    display: block;
+    position: absolute;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    background-image: conic-gradient(
+        pink 70deg, 
+        lightblue 0 235deg, 
+        orange 0);
+}
+
