--- a/CSS/component/memo.css
+++ b/CSS/component/memo.css
@@ -15,6 +15,7 @@
     display: flex;
 
     align-items: center;
+
 }
 
 .js-Memo__Button_1{
@@ -24,10 +25,15 @@ background-color: blue;
 
 .js-Memo__Button_2{
     background-color:orange;
+  
 }
 
     
 .js-Memo__Button_3{
     background-color:green;
+  
 }
-        
+
+.js-Memo_contents{
+  
+}
