--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,7 +9,8 @@
  @import "../CSS/component/memo.css";
  @import "../CSS/component/schedule.css";
  @import "../CSS/component/statistics.css";
-
+ @import "../CSS/Detail/detail_frame.css";
+ 
  body {
      height:1000vh;
      background-color: var(--background_color);
