--- a/CSS/Detail/detail_frame.css
+++ b/CSS/Detail/detail_frame.css
@@ -5,6 +5,7 @@
 
 
 .js-Detail_frame__setting{
+    /* Frame Shape */
     margin-left:30px;
     width:60%;
     background-color: gray;
@@ -13,6 +14,20 @@
     border-top-right-radius: 5px;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 10px;
+
+    /* Animation */
+    height :100%;
+    width:0%;
+    position: fixed;
+    z-index:1;
+    top:0;
+    right:0;
+    overflow-x:hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+@media screen and (max-height:450px){
+    .js-Detail_frame__setting {padding-top:15px;}
 }
 
 .js-Detail_frame__title{
