--- a/CSS/component/timer.css
+++ b/CSS/component/timer.css
@@ -19,4 +19,15 @@
     display:flex;
 }
 
-
+.cog_icon{
+    animation-name: rotate;
+    animation-duration: 0.7s;
+}
+@keyframes rotate {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
