--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -8,10 +8,15 @@
     --component-Status_top_margin:30px;
     --component_Title_top_margin:10px;
 
-    /*Memo Variable*/
+    /* Memo Variable */
     --deactivated_Btn_Color: gray;
     
 
-    /*Schedule Variable*/
+    /* Schedule Variable */
     --past_Color: gray;
+
+
+    /* MD Variable */
+    --md_frame_outline:5px solid blue;
+    --md_frame_background:green;
 }
