--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -18,5 +18,5 @@
 
     /* MD Variable */
     --md_frame_outline:5px solid blue;
-    --md_frame_background:green;
+    --md_frame_background:#FFFFE0;
 }
